# mcp_server_with_uv

./: .env.sample  .pre-commit-config.yaml  README.md  app.py  main.py  mcp_client.py  mcp_client_chat.py  mcp_server.py  pyproject.toml
templates/: index.html
