[project]
name = "mcp-server-with-uv"
version = "0.1.0"
description = "This is a sample Model Context Protocol (MCP) server built with Python, demonstrating how to expose tools and resources to LLMs and MCP clients."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
    "rich>=14.0.0",
    "streamlit>=1.46.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
    "ssort>=0.15.0",
]

[tool.isort]
skip = [".venv", ".vscode"]
